[package]
name = "signaling"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
axum = { version = "0.6.10", features = [ "ws" ] }
clap = { version = "4.1.8", features = [ "env", "derive" ] }
futures-util = "0.3.26"
parking_lot = { version = "0.12.1", features = [ "arc_lock", "serde" ] }
serde = { version = "1.0.154", features = [ "derive", "rc" ] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = [ "rt-multi-thread", "macros" ] }
tokio-stream = "0.1.12"
tower-http = { version = "0.4.0", features = [ "cors", "trace" ] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [ "env-filter" ] }
ulid = { version = "1.0.0", features = [ "serde" ] }
